@@ -9,11 +9,12 @@ import org.bukkit.plugin.RegisteredServiceProvider;
 
 import net.milkbowl.vault.economy.Economy;
 import net.milkbowl.vault.economy.EconomyResponse;
+import net.milkbowl.vault.permission.Permission;
 import nl.pim16aap2.bigDoors.util.DoorType;
 import nl.pim16aap2.bigDoors.util.Util;
 import nl.pim16aap2.jcalculator.JCalculator;
 
-public class EconomyManager
+public class VaultManager
 {
     // Try to store the price of the doors as integers, because that's faster than
     // evaluating the formula.
@@ -22,16 +23,17 @@ public class EconomyManager
     private final BigDoors plugin;
     private final HashMap<Long, Double> menu;
     private Economy economy = null;
+    private Permission perms = null;
     private final boolean vaultEnabled;
 
-    public EconomyManager(BigDoors plugin)
+    public VaultManager(BigDoors plugin)
     {
         this.plugin = plugin;
         menu = new HashMap<>();
         init();
         vaultEnabled = setupEconomy();
-//        economy.isEnabled();
-//        economy.getName();
+        if (vaultEnabled)
+            setupPermissions();
     }
 
     public boolean buyDoor(Player player, DoorType type, int blockCount)
@@ -106,6 +108,11 @@ public class EconomyManager
         {
             flagPrice = null;
         }
+    }
+
+    public boolean hasPermission(Player player, String permission)
+    {
+        return vaultEnabled && perms.playerHas(player.getWorld().getName(), player, permission);
     }
 
     private double evaluateFormula(String formula, int blockCount)
@@ -231,5 +238,12 @@ public class EconomyManager
             economy = economyProvider.getProvider();
 
         return (economy != null);
+    }
+
+    private boolean setupPermissions()
+    {
+        RegisteredServiceProvider<Permission> rsp = plugin.getServer().getServicesManager().getRegistration(Permission.class);
+        perms = rsp.getProvider();
+        return perms != null;
     }
 }
