@@ -2,7 +2,6 @@ package nl.pim16aap2.bigDoors.moveBlocks;
 
 import java.util.logging.Level;
 
-import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Location;
 
@@ -211,7 +210,7 @@ public class DoorOpener implements Opener
                 instantOpen = true;
 
         // The door's owner does not have permission to move the door into the new position (e.g. worldguard doens't allow it.
-        if (plugin.canBreakBlocksBetweenLocs(Bukkit.getPlayer(door.getPlayerUUID()), door.getNewMin(), door.getNewMax()) != null)
+        if (plugin.canBreakBlocksBetweenLocs(door.getPlayerUUID(), door.getNewMin(), door.getNewMax()) != null)
             return DoorOpenResult.NOPERMISSION;
 
         // Change door availability so it cannot be opened again (just temporarily, don't worry!).
